# PrintAThingPDF

./: .gitignore  CLAUDE.md  LICENSE  PRODUCT_DESCRIPTION.md  README.md  SumatraPDF-settings.txt  TODO.md  pdf_printer.py  pdf_splitter.py  print_labels_and_packing_sheets.py  process_labels.bat  pure_print_labels_and_packing_sheets.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: label_packing.yaml  six_page.yaml
src/pdfpipe/: cli.py  config.py  printer.py  processor.py  selector.py  transforms.py
