[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfpipe"
version = "0.1.0"
description = "Configurable PDF processing pipeline for splitting, transforming, and printing PDFs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yifei" }
]
keywords = ["pdf", "printing", "labels", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Printing",
]
dependencies = [
    "pypdf2>=3.0",
    "pyyaml>=6.0",
    "pywin32>=307; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pdfp = "pdfpipe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfpipe"]